<resources>
    <string name="app_name">Utility Pay Helper</string>
    <string name="title_home">Change object</string>
    <string name="title_choose_object">Choose an object</string>
    <string name="select_name_for_object">Write name for new object you are creating</string>
    <string name="write_name_hint">Select name for object</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="create_object_btn">Create an object</string>
    <string name="delete_btn_content_description">Delete this object</string>
    <string name="empty_data">There is no created objects</string>
    <string name="title_accept_data_deleting">Are you sure to delete this object?</string>
    <string name="yes_answer">Yes</string>
    <string name="settings">Settings</string>
    <string name="split_watter_title">Split water</string>
    <string name="split_watter_sum">Split water on 2 parts: warm and cold</string>
    <string name="rubbish_title">Rubbish</string>
    <string name="internet_title">Internet</string>
    <string name="rubbish_summary">Include rubbish data into summary cheque</string>
    <string name="internet_summary">Include internet data into summary cheque</string>
    <string name="water">Water</string>
    <string name="gas">Gas</string>
    <string name="light">Light</string>
    <string name="last_value">Last value</string>
    <string name="warm_water">Warm water:</string>
    <string name="cold_water">Cold water:</string>
    <string name="sewerage_title">Sewerage:</string>
    <string name="new_values">New values</string>
    <string name="warm_hint">Warm</string>
    <string name="cold_hint">Cold</string>
    <string name="sewerage_hint">Sewerage</string>
    <string name="pay_for">Pay for</string>
    <string name="to_pay">To pay</string>
    <string name="water_pay">Water:</string>
    <string name="summary">Sumarry:</string>
    <string name="save">Save</string>
    <string name="edit_last">Edit last</string>
    <string name="water_title">Water:</string>
    <string name="water_hint">Water</string>
    <string name="nav_header_desc">Descrioption of header</string>
    <string name="nav_header_title">Header title</string>
    <string name="nav_header_subtitle">Header subtitle</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="gas_title">Gas:</string>
    <string name="day">Day:</string>
    <string name="night">Night:</string>
    <string name="day_hint">Day</string>
    <string name="night_hint">Night</string>
    <string name="object_isnot_selected">An object is not selected</string>
    <string name="parametrs">Parametrs</string>
    <string name="data">Data</string>
    <string name="show_data">Show data</string>
    <string name="include_rubbish">Include rubbish</string>
    <string name="include_internet">Include internet</string>
    <string name="add_data">Additional data</string>
    <string name="database">Database</string>
    <string name="cost_utility">Cost of Utility items</string>
    <string name="set_cost">Set cost</string>
    <string name="set_cost_sum">Set cost for all items</string>
    <string name="cost_water">Set cost for water</string>
    <string name="costs">Costs</string>
    <string name="cost_light_day">Light (day)</string>
    <string name="cost_light_night">Light (Night)</string>
    <string name="water_cold">Water (cold)</string>
    <string name="water_warm">Warm water</string>
    <string name="unaccessible">Unaccessible</string>
    <string name="object_is_selected">Object is selected</string>
    <string name="done">Done</string>
    <string name="light_hint">Light:</string>
    <string name="light_day_hint">Light (day)</string>
    <string name="light_night">Light (night)</string>
    <string name="selected_obj_is">Selected object is:</string>
    <string name="correct_data_title">Correct data</string>
    <string name="correct_data_text">Check our input data. Is it correct?</string>
    <string name="data_saved">Data saved</string>
    <string name="error_data_saved">Error! Data has saved for this month.</string>
    <string name="value_less">Value less 0</string>
    <string name="edit_data">Edit data</string>
    <string name="edit_gas_data">Edit the last data of gas</string>
    <string name="edit_light_data">Edit the last data of light</string>
    <string name="edit_water_data">Edit the last data of water</string>
    <string name="apply">Apply</string>
    <string name="data_changed">Data changed</string>
    <string name="delete_database">Delete database</string>
    <string name="delete_database_sum">Delete all data from this phone</string>
    <string name="setting">Setting</string>
    <string name="start">start</string>
    <string name="value">value</string>


    <string name="include_sew">Include sewerage</string>
    <string name="include_sew_sum">Include sewerage in water cheque</string>
    <string name="not_include">Not include</string>


    <string-array name="month">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <string-array name="years">
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <string-array name="options">
        <item>За год</item>
        <item>За зиму</item>
        <item>За весну</item>
        <item>За лето</item>
        <item>За осень</item>
    </string-array>
</resources>
