<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/select_object">

    <fragment
        android:id="@+id/select_object"
        android:name="ru.groshevdg.utilityhelper.ui.select_object.SelectObjectFragment"
        android:label="@string/select_object"
        tools:layout="@layout/fragment_select_object" />

    <fragment
        android:id="@+id/water"
        android:name="ru.groshevdg.utilityhelper.ui.water.WaterFragment"
        android:label="@string/water"
        tools:layout="@layout/fragment_water_data_splited"/>

    <fragment
        android:id="@+id/gas"
        android:name="ru.groshevdg.utilityhelper.ui.gas.GasFragment"
        android:label="@string/gas"/>

    <fragment
        android:id="@+id/light"
        android:name="ru.groshevdg.utilityhelper.ui.light.LightFragment"
        android:label="@string/light"/>

    <fragment android:id="@+id/show_data"
        android:name="ru.groshevdg.utilityhelper.ui.show_data.FragmentShowData"
        android:label="@string/show_data"/>

    </navigation>