<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="430dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_value"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gas_title"
            android:textSize="18sp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            tools:text="28457 куб(ов)" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_values"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="70dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="100dp">

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/gas"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="155dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_for"
                android:textSize="18sp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:entries="@array/month"
                android:gravity="center"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:entries="@array/years"
                android:gravity="center"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_pay"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="190dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_pay"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="220dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textSize="18sp"
            tools:text="15"
            android:layout_marginTop="220dp"/>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sewerage_title"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="250dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="250dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textSize="18sp"
            tools:text="15" />




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="280dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="280dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textSize="18sp"
            tools:text="15" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            style="@style/custom_button"
            android:background="@drawable/custom_button"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_last"
            android:layout_gravity="bottom|left"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            style="@style/custom_button"
            android:background="@drawable/custom_button"/>

    </androidx.cardview.widget.CardView>
</LinearLayout>