<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="450dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/costs"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textSize="18sp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            tools:text="28457 куб(ов)"
            android:id="@+id/cost_day_light"/>

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night"
            android:textSize="18sp"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="70dp"
            android:textSize="18sp"
            tools:text="28457 куб(ов)"
            android:id="@+id/cost_night_light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_value"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="100dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textSize="18sp"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="130dp"
            android:textSize="18sp"
            tools:text="28457 куб(ов)"
            android:id="@+id/last_day_light_text_view"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night"
            android:textSize="18sp"
            android:layout_marginTop="160dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="160dp"
            android:textSize="18sp"
            tools:text="28457 куб(ов)"
            android:id="@+id/last_night_light_text_view"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_values"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="190dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="220dp">

            <EditText
                android:id="@+id/new_day_light_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/day_hint"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/new_night_light_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/night_hint"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="270dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_for"
                android:textSize="18sp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:entries="@array/month"
                android:gravity="center"
                android:id="@+id/light_months_spinner"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:entries="@array/years"
                android:gravity="center"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:id="@+id/years_light_spinner"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_pay"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="300dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_hint"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="330dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textSize="18sp"
            tools:text="15"
            android:layout_marginTop="330dp"
            android:id="@+id/light_to_pay_text_view"/>

        <Button
            android:id="@+id/save_light_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unaccessible"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            style="@style/custom_button"
            android:background="@drawable/custom_button"
            android:enabled="false"/>

        <Button
            android:id="@+id/edit_light_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_last"
            android:layout_gravity="bottom|left"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            style="@style/custom_button"
            android:background="@drawable/custom_button"/>

    </androidx.cardview.widget.CardView>
</LinearLayout>