<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/warm_water_new_value"
        android:hint="@string/warm_hint"
        android:autofillHints="@string/warm_hint"
        android:inputType="numberDecimal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cold_water_new_value"
        android:hint="@string/cold_hint"
        android:autofillHints="@string/cold_hint"
        android:inputType="numberDecimal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sewerage_new_value"
        android:hint="@string/sewerage_hint"
        android:autofillHints="@string/sewerage_hint"
        android:inputType="numberDecimal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />
</LinearLayout>